fixed bleeding

--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
 a {
     text-decoration: none;
 }
+
 .nav-container {
     height: 90px;
     display: flex;
@@ -82,7 +83,8 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: fit-content;
+    /* the greater of either fit content or calc(100vh- 90px) */
+    height: max(calc(100vh - 90px), fit-content);
 }
 
 #content input{
